--- a/src/components/characterSheet/CharacterSheet.css
+++ b/src/components/characterSheet/CharacterSheet.css
@@ -254,6 +254,10 @@
     justify-content: space-between;
 }
 
+.spell-section {
+    padding-top: 1rem;
+}
+
 .proficiencies-section {
     padding-left: 1rem;
 }
